# SPASkeleton

./: README.md
cdk/: package-lock.json  package.json
cdk/lib/: database-stack.ts  frontend-stack.ts  handler-stack.ts
lambda/: Cargo.toml
lambda/src/: env_key.rs  main.rs
lambda/src/handler/: handlers.rs  mod.rs  parameters.rs
lambda/src/service/: dynamo_service.rs  mod.rs  structs.rs
nextjs/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
nextjs/src/app/: globals.css  layout.tsx  page.tsx
nextjs/src/components/: entryTable.tsx
nextjs/src/icons/: penIcon.tsx  xMarkIcon.tsx
nextjs/src/lib/: UserService.ts  serverFunctions.ts
nextjs/src/lib/types/: dynamoTypes.ts
